fix z-index issue with themes, guarantee simplemenu to be on top, thanks Junyor

--- a/simplemenu.css
+++ b/simplemenu.css
@@ -5,7 +5,6 @@
 	color:#333;
 	margin:0;
 	padding:0;
-	z-index:48;
 	border-bottom:1px solid #999;
 	font:11px Verdana, Helvetica, sans-serif;
 	left:0;
@@ -13,7 +12,7 @@
 	top:0;
 	width:100%;
 	height:20px;
-	z-index:48;
+	z-index:9999;
 }
 
 #simplemenu li
@@ -26,7 +25,7 @@
 	position:relative;
 	margin:0;
 	padding:0;
-	z-index:48;
+	z-index:9999;
 	text-align: left;
 }
 
@@ -59,7 +58,7 @@
 	position:absolute;
 	margin:0;
 	padding:0;
-	z-index:48;
+	z-index:9999;
 	width:14em;
 	background:#ddd;
 	border:1px solid #999;
